<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modelMvp.main.MainActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/margin_between_bounds_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:onClick="onClickSearch"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_nothing_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="@dimen/text_size_notifications_25"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_between_text_in_item_10"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_no_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_connection"
        android:textSize="@dimen/text_size_notifications_25"
        android:layout_margin="@dimen/margin_between_text_in_item_10"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>